@@ -11,6 +11,9 @@ PyObjC NEWS</title>
 <p>An overview of the relevant changes in new, and older, releases.</p>
 <h2><a name="version-1-3-1-2005-04">Version 1.3.1 (2005-04-??)</a></h2>
 <ul>
+<li>New PyObjCTools.AppHelper functions: callAfter and callLater,
+conveniences for calling Python functions on the main thread
+as soon as possible, or after a delay.</li>
 <li>Twisted examples changed to use threadedselectreactor instead
 of cfreactor.  cfreactor is deprecated.  Needs Twisted newer
 than 2.0 (currently svn r13575 or later).</li>
